# ticktick-rust

cli/: Cargo.toml
lib/: Cargo.toml
lib/src/: authorize.rs  lib.rs
lib/src/api/: mod.rs
lib/src/auth/: authenticate.rs  mod.rs
