[package]
name = "ticktick-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", featires = ["blocking", "json"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
serde_repr = "0.1.9"
tiny_http = "0.11.0"
webbrowser = "0.7.1"
